feat: course category endpoints
